chore: add get account usecase resource
