# src/routes/account.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { authMiddleware } from "../middleware/auth.middleware";
 import { CreateAccountController } from "../modules/account/usecases/createAccountUseCase/createAccount.controller";
+import { GetAccountController } from "../modules/account/usecases/getAccountUseCase/getAccount.controller";
 
 const accountRouter = Router();
 
@@ -8,11 +9,7 @@ const createAccountController = new CreateAccountController();
 const getAccountController = new GetAccountController();
 
 accountRouter.post("/:userId", authMiddleware, createAccountController.handle);
-accountRouter.get(
-  "/:userId/:accountId",
-  authMiddleware,
-  getAccountController.handle,
-);
+accountRouter.get("/:userId", authMiddleware, getAccountController.handle);
 
 export { accountRouter };
 
